--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   logger: ^2.3.0
+  http: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,6 +56,7 @@ dev_dependencies:
 flutter:
   assets:
     - lib/asset/Images/person.png
+    - lib/asset/Images/skisho.png
     - lib/asset/Images/logout.png
     - lib/asset/Images/profile1.jpeg
     - lib/asset/Images/profile2.jpg
